feature logging + db orm 추가(jpa)

--- a/banking/src/main/resources/application.properties
+++ b/banking/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 #server.port = 7999
+
+# spring db
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/banking
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+## jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# mapper ???? ??
+logging.level.com.azurealstn.codespringweb.mapper=TRACE
+logging.level.root=debug
