--- a/banking/build.gradle
+++ b/banking/build.gradle
@@ -11,6 +11,10 @@ java {
 	sourceCompatibility = '17'
 }
 
+test {
+	useJUnitPlatform()
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
