--- a/banking/src/main/resources/application.properties
+++ b/banking/src/main/resources/application.properties
@@ -8,10 +8,13 @@ spring.datasource.password=postgres
 
 ## jpa
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-# mapper ???? ??
-logging.level.com.azurealstn.codespringweb.mapper=TRACE
-logging.level.root=debug
+# logging
+logging.logback.rollingpolicy.max-history=30
+logging.logback.rollingpolicy.max-file-size=100MB
+logging.file.name=logs/banking.log
+logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS,Asia/Seoul
