feature thymeleaf 적용 + user list 보여주기 완료

--- a/banking/src/main/resources/application.properties
+++ b/banking/src/main/resources/application.properties
@@ -12,6 +12,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+
+# mapper ???? ??
+# logging.level.com.azurealstn.codespringweb.mapper=TRACE
+# logging.level.root=debug
+
 # logging
 logging.logback.rollingpolicy.max-history=30
 logging.logback.rollingpolicy.max-file-size=100MB
