feature 에러 검증 추가 및 view 처리 추가

--- a/banking/src/main/resources/application.properties
+++ b/banking/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+spring.messages.basename=messages,errors
 
 # mapper ???? ??
 # logging.level.com.azurealstn.codespringweb.mapper=TRACE
