feature 회원 가입과 중복에 대한 예외 처리 추가
account는 form으로 받게 변경

--- a/banking/src/main/resources/errors.properties
+++ b/banking/src/main/resources/errors.properties
@@ -1,12 +1,14 @@
-required.id=Required ID
-required.password=Required Password
-required.name=Required Name
-required.email=Required Email
+required.accountCreateForm.accountNumber=Required Account Number
+required.accountCreateForm.password=Required Account Password
+required.accountCreateForm.BankName=Required BankName
+required.accountCreateForm.email=Required Email
 
 required.member.id=Required Member ID
 required.member.password=Required Member Password
 required.member.name=Required Member Name
 required.member.email=Required Member Email
+
+required="???? ????"
 #range.item.price=??? {0} ~ {1} ?? ?????.
 #max.item.quantity=??? ?? {0} ?? ?????.
 #totalPriceMin=?? * ??? ?? {0}? ????? ???. ?? ? = {1}
